--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<!DOCTYPE html><html class="no-js" lang=""><head><meta charset="utf-8"><meta http-equiv="x-ua-compatible" content="ie=edge"><title>Page Title</title><meta name="description" content=""><meta name="viewport" content="width=device-width,initial-scale=1"><link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho" rel="stylesheet"><link rel="apple-touch-icon" href="apple-touch-icon.png"><link rel="stylesheet" href="main.css"><script src="js/vendor/modernizr-2.8.3.min.js"></script></head><body><h1>Github Pages Boilerplate</h1><p>Abstract</p><p>This article tries to answer the three most popular questions regarding fontselection in LATEX. Rather than providing ready-made answers, it tries pri-marily to provide some guidance through the existing documentation.</p><script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js"></script><script>window.jQuery||document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script><script src="js/plugins.js"></script><script src="js/main.js"></script><script>window.ga=function(){ga.q.push(arguments)},ga.q=[],ga.l=+new Date,ga("create","UA-XXXXX-Y","auto"),ga("send","pageview")</script><script src="https://www.google-analytics.com/analytics.js" async defer="defer"></script></body></html>
+<!DOCTYPE html>
+<html class="no-js" lang="">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Page Title</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho" rel="stylesheet">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="stylesheet" href="/public/css/main.css">
+  </head>
+  <body>
+    
+    <img src="/public/assets/images/algorithms-js.png" alt="Onodera JS">
+    <h1>github Pages Boilerplate v2</h1>
+    <p>
+       This article tries to answer the three most popular questions regarding fontselection in LATEX. Rather than providing ready-made answers, it tries pri-marily to provide some guidance through the existing documentation.</p>
+    
+    <script>
+      window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date; ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
+      script(src="https://www.google-analytics.com/analytics.js" async defer)
+    </script>
+  </body>
+</html>
