--- a/404.html
+++ b/404.html
@@ -6,4 +6,15 @@ hide: true
 share: false
 ---
 
-Sorry, the requested page wasn't found on the server.
+<p>
+	Sorry, the requested page wasn't found on the server. :US:
+</p>
+
+<p>
+		Lo sentimos, la página solicitada no se encontró en el servidor. :PE:
+</p>
+
+
+<p>
+		Die angeforderte Seite wurde auf dem Server nicht gefunden. :DE:
+</p>
