KaTeX Works :smile:

--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@ share: false
 ---
 
 <p>
-	Sorry, the requested page wasn't found on the server. :US:
+	Sorry, the requested page wasn't found on the server. :+1:
 </p>
 
 <p>
