--- a/404.html
+++ b/404.html
@@ -3,17 +3,11 @@ layout: page
 title: 404 Not Found
 permalink: 404.html
 hide: true
-share: false
 ---
 
+<ul>
+	<li>Sorry, the requested page wasn't found on the server. :us:</li>
+	<li>Lo sentimos, la página solicitada no se encontró en el servidor. :es:</li>
+	<li>Die angeforderte Seite wurde auf dem Server nicht gefunden. :de:</li>
+  </ul>
 <p>
-	Sorry, the requested page wasn't found on the server. :+1:
-</p>
-
-<p>
-	Lo sentimos, la página solicitada no se encontró en el servidor. :PE:
-</p>
-
-<p>
-	Die angeforderte Seite wurde auf dem Server nicht gefunden. :DE:
-</p>
