--- a/404.html
+++ b/404.html
@@ -5,6 +5,10 @@ permalink: 404.html
 hide: true
 ---
 
+$$
+{\lim\limits_{x\to 404} \frac{1}{404-x} = \textrm{DNE}}
+$$
+
 <ul>
 	<li>Sorry, the requested page wasn't found on the server. :us:</li>
 	<li>Lo sentimos, la página solicitada no se encontró en el servidor. :es:</li>
